Fixed the list view visual issue as well as the height issue on iOS PWA.

--- a/frontend/themes/froniusvizualizer/styles.css
+++ b/frontend/themes/froniusvizualizer/styles.css
@@ -20,6 +20,7 @@ body {
 
 html {
     --fullscreen-height: calc(100vh - 3.5rem);
+    --fullscreen-height-list: calc(100vh - 4.5rem);
     --fullscreen-height-column: calc(100vh - 7.5rem);
     --fullscreen-height-timo-column: calc(100vh - 17rem);
 }
@@ -32,6 +33,7 @@ html {
 @supports (-webkit-touch-callout: none) {
     html {
         --fullscreen-height: calc(100vh - 10.5rem);
+        --fullscreen-height-list: calc(100vh - 3.5rem);
         --fullscreen-height-column: calc(100vh - 14.5rem);
         --fullscreen-height-timo-column: calc(100vh - 24.5rem);
     }
